--- a/test_Tesselation/test_Tesselation/test_Tesselation.vcxproj
+++ b/test_Tesselation/test_Tesselation/test_Tesselation.vcxproj
@@ -200,7 +200,7 @@ libs/fontstash/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories
     <ClCompile Include="..\..\..\..\addons\ofxGui\src\ofxToggle.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
-    <ClCompile Include="src\triangulate.cpp" />
+    <ClCompile Include="src\triangulator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\addons\ofxEasing\src\ofxEasing.h" />
@@ -217,7 +217,7 @@ libs/fontstash/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories
     <ClInclude Include="..\..\..\..\addons\ofxGui\src\ofxSliderGroup.h" />
     <ClInclude Include="..\..\..\..\addons\ofxGui\src\ofxToggle.h" />
     <ClInclude Include="src\ofApp.h" />
-    <ClInclude Include="src\triangulate.h" />
+    <ClInclude Include="src\triangulator.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
